improve navbar (stop layout shift on hover)

--- a/styles.css
+++ b/styles.css
@@ -106,30 +106,50 @@ h3 {
         height: 52px;
     }
 
+    .navbar-nav-item{
+        position: relative;
+    }
+
 
     .navbar-nav-item .link {
+        position: relative;
         display: inline-flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        padding: 1rem 1.5rem;
-
         font-weight: 16px;
+        transition: font-weight 200ms;
+    }
+
+
+    .navbar-nav-item::after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: 0;
+        background-color: #fff;
+        transform: scaleX(0);
+        transition: transform 200ms;
+
     }
 
     .navbar-nav-item .link::after {
-        content: attr("data-text");
+        content: attr(data-text);
+        height: 0;
         visibility: hidden;
         overflow: hidden;
-        user-select: none;
-        pointer-events: none;
         font-weight: 700;
     }
 
-    .navbar-nav-item:hover {
-        text-decoration: underline;
+    .navbar-nav-item .link:hover {
         font-weight: 700;
         cursor: pointer;
+    }
+
+    .navbar-nav-item:hover::after{
+transform: scaleX(1);
     }
 
 }
@@ -461,7 +481,7 @@ h3 {
     padding-left: 2rem;
     border-radius: 24px;
     border: none;
-   
+
 }
 
 .btn.btn-submit {
